--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coinbase/onchainkit": "^0.14.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@reservoir0x/relay-sdk": "^0.4.0",
+    "@tanstack/react-query": "^5.32.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
     "frog": "latest",
+    "graphql": "14",
+    "graphql-request": "6",
     "hono": "^4",
     "lucide-react": "^0.343.0",
     "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "18",
+    "react-dom": "18",
     "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "^2.9.28"
+    "viem": "2.x"
   },
   "devDependencies": {
     "@types/node": "^20",
